AUX_SOURCE_DIRECTORY(. HELMETWIL2PNG_SRC)
ADD_EXECUTABLE(helmetwil2png ${HELMETWIL2PNG_SRC})
ADD_DEPENDENCIES(helmetwil2png mir2x_3rds)

TARGET_INCLUDE_DIRECTORIES(helmetwil2png PRIVATE ${MIR2X_COMMON_SOURCE_DIR} )
TARGET_INCLUDE_DIRECTORIES(helmetwil2png PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
TARGET_INCLUDE_DIRECTORIES(helmetwil2png PRIVATE ${CMAKE_CURRENT_LIST_DIR}  )

TARGET_LINK_LIBRARIES(helmetwil2png ${CMAKE_DL_LIBS})
TARGET_LINK_LIBRARIES(helmetwil2png common          )
TARGET_LINK_LIBRARIES(helmetwil2png PNG::PNG        )
