AUX_SOURCE_DIRECTORY(. MAPCONVERTER)
ADD_EXECUTABLE(mapconverter ${MAPCONVERTER})
ADD_DEPENDENCIES(mapconverter mir2x_3rds)

TARGET_INCLUDE_DIRECTORIES(mapconverter PRIVATE ${MIR2X_COMMON_SOURCE_DIR})
TARGET_INCLUDE_DIRECTORIES(mapconverter PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
TARGET_INCLUDE_DIRECTORIES(mapconverter PRIVATE ${CMAKE_CURRENT_LIST_DIR})

TARGET_LINK_LIBRARIES(mapconverter common)
TARGET_LINK_LIBRARIES(mapconverter PNG::PNG)
