AUX_SOURCE_DIRECTORY(. MAPDBMAKER)
ADD_EXECUTABLE(mapdbmaker ${MAPDBMAKER})

install(TARGETS mapdbmaker DESTINATION ${BIN_DIR}/tools)
install(FILES ${CMAKE_SOURCE_DIR}/tools/mapdbmaker/src/main.sh DESTINATION ${BIN_DIR}/tools)

TARGET_INCLUDE_DIRECTORIES(mapdbmaker PRIVATE ${COMMON_SOURCE_DIR})
TARGET_INCLUDE_DIRECTORIES(mapdbmaker PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
TARGET_INCLUDE_DIRECTORIES(mapdbmaker PRIVATE ${CMAKE_CURRENT_LIST_DIR})

TARGET_LINK_LIBRARIES(mapdbmaker common)
