FILE(GLOB FLTK_ALL_SRC "*.[fF][lL]")

FOREACH(FLTK_SRC ${FLTK_ALL_SRC})
    # generate fltk output source file name
    GET_FILENAME_COMPONENT(T_BASENAME ${FLTK_SRC} NAME_WE)
    SET(T_OUT_CPPNAME ${T_BASENAME}.cpp)
    SET(T_OUT_HPPNAME ${T_BASENAME}.hpp)

    ADD_CUSTOM_COMMAND(OUTPUT ${T_OUT_CPPNAME} ${T_OUT_HPPNAME}
        # COMMAND echo generating ${T_OUT_HPPNAME} and ${T_OUT_CPPNAME}
        COMMAND fluid -c -o ${T_OUT_CPPNAME} -h ${T_OUT_HPPNAME} ${FLTK_SRC}
        WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
        )

    ADD_CUSTOM_TARGET(${T_BASENAME}.hcpp ALL
        DEPENDS ${T_OUT_HPPNAME} ${T_OUT_CPPNAME})

    # # this is needed before build, to execute some commands
    # ADD_CUSTOM_COMMAND(TARGET ${T_BASENAME}.hcpp
    #     PRE_BUILD 
    #     COMMAND ECHO "EXECUTING A FAKE COMMAND"
    #     COMMENT "THIS COMMAND WILL BE EXECUTED BEFORE BUILDING TARGET TEST1")
ENDFOREACH()

AUX_SOURCE_DIRECTORY(. MAPEDITOR_SRC)
ADD_EXECUTABLE(mapeditor ${MAPEDITOR_SRC})

TARGET_INCLUDE_DIRECTORIES(mapeditor PRIVATE ${COMMON_SOURCE_DIR})

TARGET_LINK_LIBRARIES(mapeditor ${FLTK_LIBRARIES}  )
TARGET_LINK_LIBRARIES(mapeditor ${OPENGL_LIBRARIES})
TARGET_LINK_LIBRARIES(mapeditor dl                 )
TARGET_LINK_LIBRARIES(mapeditor common             )

