SET(FLTK_HPP_SRC "")
SET(FLTK_CPP_SRC "")
FLTK_PARSE_FL_FILE(FLTK_HPP_SRC FLTK_CPP_SRC)

AUX_SOURCE_DIRECTORY(. MAPEDITOR_SRC)
ADD_EXECUTABLE(mapeditor ${MAPEDITOR_SRC} ${FLTK_CPP_SRC})
ADD_DEPENDENCIES(mapeditor mir2x_3rds)

TARGET_INCLUDE_DIRECTORIES(mapeditor PRIVATE ${MIR2X_COMMON_SOURCE_DIR})
TARGET_INCLUDE_DIRECTORIES(mapeditor PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
TARGET_INCLUDE_DIRECTORIES(mapeditor PRIVATE ${CMAKE_CURRENT_LIST_DIR})

TARGET_LINK_LIBRARIES(mapeditor ${FLTK_LIBRARIES}  )
TARGET_LINK_LIBRARIES(mapeditor ${OPENGL_LIBRARIES})
TARGET_LINK_LIBRARIES(mapeditor ${CMAKE_DL_LIBS}   )
TARGET_LINK_LIBRARIES(mapeditor common             )
TARGET_LINK_LIBRARIES(mapeditor ${PNG_LIBRARIES}   )

INSTALL(TARGETS mapeditor DESTINATION tools/mapeditor)
