AUX_SOURCE_DIRECTORY(. MAPINFO_SRC)
ADD_EXECUTABLE(mapinfo ${MAPINFO_SRC})

TARGET_INCLUDE_DIRECTORIES(mapinfo PRIVATE ${COMMON_SOURCE_DIR})
TARGET_INCLUDE_DIRECTORIES(mapinfo PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
TARGET_INCLUDE_DIRECTORIES(mapinfo PRIVATE ${CMAKE_CURRENT_LIST_DIR})

TARGET_LINK_LIBRARIES(mapinfo common)
