AUX_SOURCE_DIRECTORY(. MAPWIL2PNG_SRC)
ADD_EXECUTABLE(mapwil2png ${MAPWIL2PNG_SRC})
ADD_DEPENDENCIES(mapwil2png mir2x_3rds)

TARGET_INCLUDE_DIRECTORIES(mapwil2png PRIVATE ${MIR2X_COMMON_SOURCE_DIR})
TARGET_INCLUDE_DIRECTORIES(mapwil2png PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
TARGET_INCLUDE_DIRECTORIES(mapwil2png PRIVATE ${CMAKE_CURRENT_LIST_DIR})

TARGET_LINK_LIBRARIES(mapwil2png ${CMAKE_DL_LIBS})
TARGET_LINK_LIBRARIES(mapwil2png common          )
TARGET_LINK_LIBRARIES(mapwil2png ${PNG_LIBRARIES}        )
