AUX_SOURCE_DIRECTORY(. PNGMKER_SRC)

ADD_EXECUTABLE(monmagicwil2png ${PNGMKER_SRC})
ADD_DEPENDENCIES(monmagicwil2png mir2x_3rds)

TARGET_INCLUDE_DIRECTORIES(monmagicwil2png PRIVATE ${MIR2X_COMMON_SOURCE_DIR})
TARGET_INCLUDE_DIRECTORIES(monmagicwil2png PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
TARGET_INCLUDE_DIRECTORIES(monmagicwil2png PRIVATE ${CMAKE_CURRENT_LIST_DIR})

TARGET_LINK_LIBRARIES(monmagicwil2png ${OPENGL_LIBRARIES})
TARGET_LINK_LIBRARIES(monmagicwil2png ${CMAKE_DL_LIBS}   )
TARGET_LINK_LIBRARIES(monmagicwil2png common             )
TARGET_LINK_LIBRARIES(monmagicwil2png PNG::PNG           )
