AUX_SOURCE_DIRECTORY(. MONSTERGEN)
ADD_EXECUTABLE(monstergen ${MONSTERGEN})
ADD_DEPENDENCIES(monstergen mir2x_3rds)

TARGET_INCLUDE_DIRECTORIES(monstergen PRIVATE ${MIR2X_COMMON_SOURCE_DIR})
TARGET_INCLUDE_DIRECTORIES(monstergen PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
TARGET_INCLUDE_DIRECTORIES(monstergen PRIVATE ${CMAKE_CURRENT_LIST_DIR})

TARGET_LINK_LIBRARIES(monstergen common)
