AUX_SOURCE_DIRECTORY(. MONSTERWIL2PNG_SRC)
ADD_EXECUTABLE(monsterwil2png ${MONSTERWIL2PNG_SRC})
ADD_DEPENDENCIES(monsterwil2png mir2x_3rds)

TARGET_INCLUDE_DIRECTORIES(monsterwil2png PRIVATE ${MIR2X_COMMON_SOURCE_DIR})
TARGET_INCLUDE_DIRECTORIES(monsterwil2png PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
TARGET_INCLUDE_DIRECTORIES(monsterwil2png PRIVATE ${CMAKE_CURRENT_LIST_DIR})

TARGET_LINK_LIBRARIES(monsterwil2png ${CMAKE_DL_LIBS}   )
TARGET_LINK_LIBRARIES(monsterwil2png common             )
TARGET_LINK_LIBRARIES(monsterwil2png ${PNG_LIBRARIES}   )

INSTALL(TARGETS monsterwil2png DESTINATION tools/monsterwil2png)
INSTALL(PROGRAMS monsterwil2png.sh DESTINATION tools/monsterwil2png)
