AUX_SOURCE_DIRECTORY(. NPCGEN)
ADD_EXECUTABLE(npcgen ${NPCGEN})

TARGET_INCLUDE_DIRECTORIES(npcgen PRIVATE ${MIR2X_COMMON_SOURCE_DIR})
TARGET_INCLUDE_DIRECTORIES(npcgen PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
TARGET_INCLUDE_DIRECTORIES(npcgen PRIVATE ${CMAKE_CURRENT_LIST_DIR})

TARGET_LINK_LIBRARIES(npcgen common)
