SET(FLTK_HPP_SRC "")
SET(FLTK_CPP_SRC "")
FLTK_PARSE_FL_FILE(FLTK_HPP_SRC FLTK_CPP_SRC)

AUX_SOURCE_DIRECTORY(. QUESTDESIGNER_SRC)
ADD_EXECUTABLE(questdesigner ${QUESTDESIGNER_SRC} ${FLTK_CPP_SRC})
ADD_DEPENDENCIES(questdesigner mir2x_3rds)

TARGET_INCLUDE_DIRECTORIES(questdesigner PRIVATE ${MIR2X_COMMON_SOURCE_DIR})
TARGET_INCLUDE_DIRECTORIES(questdesigner PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
TARGET_INCLUDE_DIRECTORIES(questdesigner PRIVATE ${CMAKE_CURRENT_LIST_DIR})

TARGET_LINK_LIBRARIES(questdesigner ${FLTK_LIBRARIES}  )
TARGET_LINK_LIBRARIES(questdesigner ${OPENGL_LIBRARIES})
TARGET_LINK_LIBRARIES(questdesigner ${CMAKE_DL_LIBS}   )
TARGET_LINK_LIBRARIES(questdesigner common             )
TARGET_LINK_LIBRARIES(questdesigner PNG::PNG           )

INSTALL(TARGETS questdesigner DESTINATION tools/questdesigner)
