AUX_SOURCE_DIRECTORY(. RAWBUFMAKER_SRC)
ADD_EXECUTABLE(rawbufmaker ${RAWBUFMAKER_SRC})

TARGET_INCLUDE_DIRECTORIES(rawbufmaker PRIVATE ${MIR2X_COMMON_SOURCE_DIR})
TARGET_INCLUDE_DIRECTORIES(rawbufmaker PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
TARGET_INCLUDE_DIRECTORIES(rawbufmaker PRIVATE ${CMAKE_CURRENT_LIST_DIR})

TARGET_LINK_LIBRARIES(rawbufmaker common)

INSTALL(TARGETS rawbufmaker DESTINATION tools/rawbufmaker)
