AUX_SOURCE_DIRECTORY(. SOUNDLISTDECODER_SRC)
ADD_EXECUTABLE(soundlistdecoder ${SOUNDLISTDECODER_SRC})
ADD_DEPENDENCIES(soundlistdecoder mir2x_3rds)

TARGET_INCLUDE_DIRECTORIES(soundlistdecoder PRIVATE ${MIR2X_COMMON_SOURCE_DIR})
TARGET_INCLUDE_DIRECTORIES(soundlistdecoder PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
TARGET_INCLUDE_DIRECTORIES(soundlistdecoder PRIVATE ${CMAKE_CURRENT_LIST_DIR})

TARGET_LINK_LIBRARIES(soundlistdecoder common)

INSTALL(TARGETS soundlistdecoder DESTINATION tools/soundlistdecoder)
