SET(FLTK_HPP_SRC "")
SET(FLTK_CPP_SRC "")
FLTK_PARSE_FL_FILE(FLTK_HPP_SRC FLTK_CPP_SRC)

AUX_SOURCE_DIRECTORY(. SHADOWMAKER_SRC)
ADD_EXECUTABLE(weaponwil2png ${SHADOWMAKER_SRC} ${FLTK_CPP_SRC})
ADD_DEPENDENCIES(weaponwil2png mir2x_3rds)

TARGET_INCLUDE_DIRECTORIES(weaponwil2png PRIVATE ${MIR2X_COMMON_SOURCE_DIR})
TARGET_INCLUDE_DIRECTORIES(weaponwil2png PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
TARGET_INCLUDE_DIRECTORIES(weaponwil2png PRIVATE ${CMAKE_CURRENT_LIST_DIR})

TARGET_LINK_LIBRARIES(weaponwil2png ${FLTK_LIBRARIES}  )
TARGET_LINK_LIBRARIES(weaponwil2png ${OPENGL_LIBRARIES})
TARGET_LINK_LIBRARIES(weaponwil2png ${CMAKE_DL_LIBS}                 )
TARGET_LINK_LIBRARIES(weaponwil2png common             )
TARGET_LINK_LIBRARIES(weaponwil2png ${TINYXML2_LIBRARIES}           )
TARGET_LINK_LIBRARIES(weaponwil2png ${PNG_LIBRARIES}                )
