AUX_SOURCE_DIRECTORY(. WTLDECODER_SRC)
ADD_EXECUTABLE(wtldecoder ${WTLDECODER_SRC})
ADD_DEPENDENCIES(wtldecoder mir2x_3rds)

TARGET_INCLUDE_DIRECTORIES(wtldecoder PRIVATE ${MIR2X_COMMON_SOURCE_DIR} )
TARGET_INCLUDE_DIRECTORIES(wtldecoder PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
TARGET_INCLUDE_DIRECTORIES(wtldecoder PRIVATE ${CMAKE_CURRENT_LIST_DIR}  )

TARGET_LINK_LIBRARIES(wtldecoder ${CMAKE_DL_LIBS})
TARGET_LINK_LIBRARIES(wtldecoder common          )
TARGET_LINK_LIBRARIES(wtldecoder ${PNG_LIBRARIES}        )
