AUX_SOURCE_DIRECTORY(. XMLTRAN_SRC)
ADD_EXECUTABLE(xmltran ${XMLTRAN_SRC})
ADD_DEPENDENCIES(xmltran mir2x_3rds)

TARGET_INCLUDE_DIRECTORIES(xmltran PRIVATE ${MIR2X_COMMON_SOURCE_DIR})
TARGET_INCLUDE_DIRECTORIES(xmltran PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
TARGET_INCLUDE_DIRECTORIES(xmltran PRIVATE ${CMAKE_CURRENT_LIST_DIR})

TARGET_LINK_LIBRARIES(xmltran common)
TARGET_LINK_LIBRARIES(xmltran ${TINYXML2_LIBRARIES} )

INSTALL(TARGETS xmltran DESTINATION tools/xmltran)
